@@ -1,3 +1,5 @@
+11/21/13 Solutions: add expand/collapse bar for graph
+11/21/13 add optional 'rightTitle' to ExpandCollapseBar, to support graphs
 11/21/13 Solutions: add placeholder (rectangle) for graph, in order to work on general layout
 11/21/13 Solutions: expand/collapse bar for pH meter
 11/21/13 implement pH meter for 'Solutions' screen
